Fixed tabs.create to open a new tab. Added CSS to the popup.
chrome.tabs.create now makes the new focused window link to a reddit page. Still does not link to the specified subreddit.

Added CSS to the popup html file to make each element fit nicely.

--- a/search.html
+++ b/search.html
@@ -3,6 +3,22 @@
 	<head>
 		<title>Instant Subreddit</title>
 		<script src="search.js"></script>
+		<style type="text/css">
+		body {
+			width:225px;
+			height:60px;
+			font-family: Arial;
+		}
+
+		input {
+			width:150px;
+		}
+
+		button{
+			width:40px;
+		}
+
+		</style>
 	</head>
 
 	<body>
