Works as intended

--- a/search.html
+++ b/search.html
@@ -2,8 +2,10 @@
 <html>
 	<head>
 		<title>Instant Subreddit</title>
-		<script src="search.js"></script>
+		<script src='search.js'></script>
+
 		<style type="text/css">
+
 		body {
 			width:225px;
 			height:60px;
@@ -19,6 +21,7 @@
 		}
 
 		</style>
+
 	</head>
 
 	<body>
